scripts/nullness/nullgtn/url0f7f8f6435_TimmiTBy_Epam_tgz-pJ8-com_epam_electricalappliance_RunnerJ8.txt
../nullgtn/url0f7f8f6435_TimmiTBy_Epam_tgz-pJ8-com_epam_electricalappliance_RunnerJ8/src/com/epam/electricalappliance/device/kitchen/Fridge.java:47: error: [override.param] Incompatible parameter type for obj.
    public boolean equals(Object obj) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Fridge
    @Initialized @NonNull boolean equals(@Initialized @NonNull Fridge this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../nullgtn/url0f7f8f6435_TimmiTBy_Epam_tgz-pJ8-com_epam_electricalappliance_RunnerJ8/src/com/epam/electricalappliance/device/kitchen/Oven.java:40: error: [override.param] Incompatible parameter type for obj.
    public boolean equals(Object obj) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Oven
    @Initialized @NonNull boolean equals(@Initialized @NonNull Oven this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../nullgtn/url0f7f8f6435_TimmiTBy_Epam_tgz-pJ8-com_epam_electricalappliance_RunnerJ8/src/com/epam/electricalappliance/device/bathroom/HairDryer.java:20: error: [initialization.fields.uninitialized] the constructor does not initialize fields: mode
    public HairDryer(int windSpeed) {
           ^
../nullgtn/url0f7f8f6435_TimmiTBy_Epam_tgz-pJ8-com_epam_electricalappliance_RunnerJ8/src/com/epam/electricalappliance/device/bathroom/HairDryer.java:59: error: [override.param] Incompatible parameter type for obj.
    public boolean equals(Object obj) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull HairDryer
    @Initialized @NonNull boolean equals(@Initialized @NonNull HairDryer this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
Note: ../nullgtn/url0f7f8f6435_TimmiTBy_Epam_tgz-pJ8-com_epam_electricalappliance_RunnerJ8/src/com/epam/electricalappliance/utilsfordevices/Sort.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
